# gen-ai-blog-series

./: README.md
local-llm-model/: .env.template  README.md  main.py  pyproject.toml  run.sh
local-llm-model/local_llm_model/: model_serving.py
